[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/images/MS_BG_EDIT.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://assets/images/reset_normal.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/FX-LED.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://assets/images/minesweeperTile.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/simhei.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=4]
size = 160
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="TileSet" id=2]
0/name = "minesweeperTile.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 224, 64 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Game" type="Node2D" parent="."]

[node name="BG" type="NinePatchRect" parent="Game"]
margin_right = 136.0
margin_bottom = 191.0
texture = ExtResource( 1 )
patch_margin_left = 12
patch_margin_top = 72
patch_margin_right = 12
patch_margin_bottom = 12

[node name="GUI" type="Control" parent="Game"]

[node name="MenuButton" type="MenuButton" parent="Game/GUI"]
margin_left = 10.0
margin_top = 5.0
margin_right = 342.0
margin_bottom = 172.0
rect_scale = Vector2( 0.1, 0.1 )
theme = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.32, 0.32, 0.32, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "菜单"
items = [ "难度设置", null, 0, false, false, 0, 0, null, "", false ]

[node name="MarginContainer" type="MarginContainer" parent="Game/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 34.0
margin_right = -14.0
margin_bottom = 58.0

[node name="HBoxContainer" type="HBoxContainer" parent="Game/GUI/MarginContainer"]
margin_right = 110.0
margin_bottom = 24.0

[node name="mineBG" type="ColorRect" parent="Game/GUI/MarginContainer/HBoxContainer"]
margin_right = 39.0
margin_bottom = 24.0
rect_min_size = Vector2( 39, 23 )
color = Color( 0, 0, 0, 1 )

[node name="mineLabel" type="Label" parent="Game/GUI/MarginContainer/HBoxContainer/mineBG"]
margin_right = 40.0
margin_bottom = 25.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "000"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="Game/GUI/MarginContainer/HBoxContainer"]
margin_left = 43.0
margin_right = 67.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="resetButton" type="TextureButton" parent="Game/GUI/MarginContainer/HBoxContainer/CenterContainer"]
margin_right = 24.0
margin_bottom = 24.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="timeBG" type="ColorRect" parent="Game/GUI/MarginContainer/HBoxContainer"]
margin_left = 71.0
margin_right = 110.0
margin_bottom = 24.0
rect_min_size = Vector2( 39, 23 )
color = Color( 0, 0, 0, 1 )

[node name="timeLabel" type="Label" parent="Game/GUI/MarginContainer/HBoxContainer/timeBG"]
margin_right = 40.0
margin_bottom = 25.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "000"
align = 1
valign = 1

[node name="TileMap" type="TileMap" parent="Game"]
position = Vector2( 11, 71 )
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="Tick" type="Timer" parent="."]

[connection signal="pressed" from="Game/GUI/MarginContainer/HBoxContainer/CenterContainer/resetButton" to="." method="_on_resetButton_pressed"]
[connection signal="timeout" from="Tick" to="." method="_on_Tick_timeout"]
